--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -4,7 +4,7 @@
 \label{appendix_pca}
 
 Alle Bilder, die als Eingabe für die PCA verwendet wurden, sind in Abbildung \ref{all_images} zu finden und ihre Quellen in Abschnitt \ref{picture_sources}. In Abschnitt \ref{appendix_pca_weight} sind die Quellen für die erhobenen Gewichte für jedes Beispiel aufgezählt. 
-Abbildungen \ref{input_data} und \ref{input_data_weight} zeigen die Verteilung aller erhobenen Merkmale und in den Abbildungen \ref{qq_diagrams_spine} und  \ref{qq_diagrams_rest} sind die zugehörigen Quantil-Quantil-Diagramme der kontinuierlichen Merkmale zu sehen.
+Abbildungen \ref{input_data} und \ref{input_data_weight} zeigen die Verteilungen aller erhobenen Merkmale und in den Abbildungen \ref{qq_diagrams_spine} und  \ref{qq_diagrams_rest} sind die zugehörigen Quantil-Quantil-Diagramme der kontinuierlichen Merkmale zu sehen.
 Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \ref{pca_results_sqrtEV} zu finden.
 
 %--------------------
@@ -14,7 +14,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
  Alle Tiere, die nicht aufgezählt sind, sind aus \cite{Spezielle_Zoologie} entnommen.
  
  \begin{itemize}
-  \item Archaeopteryx, Ichthyosaurus, Ichthyostega, Urpferdchen aus \cite{Zoologie24Wehner}
+  \item Archaeopteryx, Ichthyosaurus, Ichthyostega und Urpferdchen aus \cite{Zoologie24Wehner}
   \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
   \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
   \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
@@ -23,7 +23,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
   \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
   \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
   \item Pferd \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
-  \item Schlange: zu Schlangen gibt es keine Bilder, die deren Skelett in ausgestrecktem Zustand von der Seite darstellen. Deshalb wurde ein leeres Bild genommen und der Verlauf des Rückens durch eine Gerade angenähert (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo Hals in Rücken und Rücken in Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
+  \item Schlange: Schlangenskelette werden nicht in ausgestrecktem Zustand von der Seite abgebildet. Deshalb wurde ein leeres Bild verwendet und der Verlauf des Rückens durch eine Gerade angenähert. (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo der Hals in den Rücken und der Rücken in den Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
   \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
   \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
   \item Strauß \url{https://www.alamy.de/stockfoto-skelett-von-strauss-24658845.html}
@@ -89,7 +89,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
 \subfloat[Urpferdchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder_klein/Urpferdchen.jpg}}
 
 
-\caption{Alle Bilder, die als Eingabe für die PCA verwendet wurden.}
+\caption{Alle Bilder, die annotiert als Eingabebeispiele für die PCA verwendet wurden.}
 \label{all_images}
 \end{figure}
 
@@ -103,7 +103,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
   \item Afrikanischer Strauß bis 135kg, \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
   \item Amerikanischer Flussbarsch 2kg, \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
   \item Archaeopteryx 1kg, \url{https://de.wikipedia.org/wiki/Archaeopteryx}
-  \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}, "`das schwerste bekannte Tier der Erdgeschichte"' \url{https://de.wikipedia.org/wiki/Blauwal}
+  \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}
   \item Brachiosaurus 23-44 Tonnen, \url{https://de.wikipedia.org/wiki/Brachiosaurus}
   \item Chamäleon 0,1-2kg, \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
   \item Dimetrodon 250kg, \url{https://de.wikipedia.org/wiki/Dimetrodon}
@@ -116,7 +116,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
   \item Girafffe bis 2 Tonnen, \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
   \item Gnu 140-250kg, \url{https://de.wikipedia.org/wiki/Gnus}
   \item Grönlandwal 50-100 Tonnen, \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
-  \item Ichthyornis 0.3kg, \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
+  \item Ichthyornis 0,3kg, \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
   \item Ichthyosaurus 90kg, \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
   \item Ichthyostega 80kg, \url{https://dinosaurierwelt.com/ichthyostega/}
   \item Kaffernbüffel 350-900kg, \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
@@ -128,7 +128,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
   \item Landschildkröte je nach Art, grob 50kg
   \item Ohrenrobbe 25-500kg, \url{https://de.wikipedia.org/wiki/Ohrenrobben}
   \item Panzerspitzmaus 100g ,\url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
-  \item Parasaurolophus walkeri 4-5 Tonnen, \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
+  \item Parasaurolophus walkeri 4-5 Tonnen,\\ \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
   \item Peloneustes philarchus 100kg, \url{https://de.wikipedia.org/wiki/Peloneustes}
   \item Pottwal bis 50 Tonnen, \url{https://de.wikipedia.org/wiki/Pottwal}
   \item Rothirsch 80-350kg, \url{https://de.wikipedia.org/wiki/Rothirsch}
@@ -260,7 +260,7 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
    \qquad
    \subfloat[Länge Fuß]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram27.pdf}}
 
-   \caption{Quantil-Quantil-Diagramme für die Dimensionen der Eingabedaten, die zusätzlich zur Wirbelsäule erhoben wurden. Nicht dargestellt ist das binäre Attribut \emph{Flügel} und die Anzahl der Beine mit Bodenkontakt.}
+   \caption{Quantil-Quantil-Diagramme für die Dimensionen der Eingabedaten, die zusätzlich zur Wirbelsäule erhoben wurden. Nicht dargestellt ist das binäre Attribut \emph{Flügel} und die Anzahl der \emph{Beine mit Bodenkontakt}.}
    \label{qq_diagrams_rest}
   \end{figure}
   
@@ -271,35 +271,35 @@ Einige Visualisierungen von Punkten im PCA-Koordinatensystem sind in Abbildung \
  
  \begin{figure}
    \centering
-   \subfloat[1-, \emph{Flügel} $0,38$, \emph{Beine} $1,6$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV1_neg.jpg}}
+   \subfloat[1-, \emph{Flügel} $0{,}38$, \emph{Beine} $1{,}6$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV1_neg.jpg}}
    \qquad
-   \subfloat[1+, \emph{Flügel} $-0,057$, \emph{Beine} $1,2$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV1_pos.jpg}}
+   \subfloat[1+, \emph{Flügel} $-0{,}057$, \emph{Beine} $1{,}2$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV1_pos.jpg}}
    \\
-   \subfloat[2-, \emph{Flügel} $0,014$, \emph{Beine} $1,4$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV2_neg.jpg}}
+   \subfloat[2-, \emph{Flügel} $0{,}014$, \emph{Beine} $1{,}4$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV2_neg.jpg}}
    \qquad
-   \subfloat[2+, \emph{Flügel} $0,3$, \emph{Beine} $1,3$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV2_pos.jpg}}
+   \subfloat[2+, \emph{Flügel} $0{,}3$, \emph{Beine} $1{,}3$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV2_pos.jpg}}
    \\
-   \subfloat[3-, \emph{Flügel} $0,11$, \emph{Beine} $1,6$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV3_neg.jpg}}
+   \subfloat[3-, \emph{Flügel} $0{,}11$, \emph{Beine} $1{,}6$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV3_neg.jpg}}
    \qquad
-   \subfloat[3+, \emph{Flügel} $0,21$, \emph{Beine} $1,2$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV3_pos.jpg}}
+   \subfloat[3+, \emph{Flügel} $0{,}21$, \emph{Beine} $1{,}2$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV3_pos.jpg}}
    \phantomcaption
  \end{figure}
  \begin{figure}
    \ContinuedFloat
    \centering
-   \subfloat[4-, \emph{Flügel} $0,3$, \emph{Beine} $1$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV4_neg.jpg}}
+   \subfloat[4-, \emph{Flügel} $0{,}3$, \emph{Beine} $1$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV4_neg.jpg}}
    \qquad
-   \subfloat[4+, \emph{Flügel} $0,022$, \emph{Beine} $1,8$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV4_pos.jpg}}
+   \subfloat[4+, \emph{Flügel} $0{,}022$, \emph{Beine} $1{,}8$, \emph{Gewicht} $94$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV4_pos.jpg}}
    \\
-   \subfloat[5-, \emph{Flügel} $0,08$, \emph{Beine} $1,6$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV5_neg.jpg}}
+   \subfloat[5-, \emph{Flügel} $0{,}08$, \emph{Beine} $1{,}6$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV5_neg.jpg}}
    \qquad
-   \subfloat[5+, \emph{Flügel} $0,24$, \emph{Beine} $1,2$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV5_pos.jpg}}
+   \subfloat[5+, \emph{Flügel} $0{,}24$, \emph{Beine} $1{,}2$, \emph{Gewicht} $93$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV5_pos.jpg}}
    \\
-   \subfloat[6-, \emph{Flügel} $0,21$, \emph{Beine} $1,5$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV6_neg.jpg}}
+   \subfloat[6-, \emph{Flügel} $0{,}21$, \emph{Beine} $1{,}5$, \emph{Gewicht} $92$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV6_neg.jpg}}
    \qquad
-   \subfloat[6+, \emph{Flügel} $0,11$, \emph{Beine} $1,3$, \emph{Gewicht} $98$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV6_pos.jpg}}
+   \subfloat[6+, \emph{Flügel} $0{,}11$, \emph{Beine} $1{,}3$, \emph{Gewicht} $98$kg]{\includegraphics[width=0.45\textwidth]{../PCA/sqrtEV_log_weight_downscaled_wings_legs_and_weight/EV6_pos.jpg}}
    
-   \caption{Datenpunkte im PCA-Koordinatensystem. Eine Koordinate nimmt den Wert der positiven (+) \bzw negativen (-) Standardabweichung in die entsprechende Richtung an, alle anderen sind null. Von oben nach unten sind die Ergebnisse für den größten (1) bis zum sechstgrößten (6) Eigenwert dargestellt. \emph{Beine} steht für \emph{Beine mit Bodenkontakt}.}
+   \caption{Datenpunkte, deren $i$-te Koordinate in der PCA-Basis den Wert der positiven (+) \bzw negativen (-) Standardabweichung annimmt, alle anderen Koordinaten sind null. Von oben nach unten sind die Ergebnisse für $i = 1,\dots ,6$ dargestellt.}
    \label{pca_results_sqrtEV}
   \end{figure}
   
