--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -17,28 +17,26 @@ Werden Inhalte, wie Texturen oder 3D-Objekte, generiert, ohne dass diese vor der
 Ursprünglich wurde PG verwendet, weil der Speicherplatz auf Computern sehr begrenzt war. Große 3D-Landschaften oder andere vorgefertigte künstlerische Werke konnten nicht gespeichert werden.\\
 Die Demoszene treibt PG ins Extreme. Sie entstand in den 1980er Jahren und zeigt mit künstlerischen Inhalten, dass beeindruckende Ergebnisse trotz stark limitiertem Speicherplatz möglich sind \bzw wie das volle Potential von Computerhardware ausgeschöpft werden kann \cite{DemoScene}. 
 
-Auf heutigen Rechnern ist der Speicherplatz nicht mehr so begrenzt und es kann viel Inhalt, \zb für PC-Spiele, von Künstlern vorgefertigt werden. Trotzdem behält PG ihre Daseinsberechtigung, da der Entwurf komplexer Inhalte, wie beispielsweise Landschaften mit viel Vegetation, aufwändig ist und viel Zeit benötigt. Hier können wieder Algorithmen aus der PG eingesetzt werden um Zeit und Arbeit zu sparen. Sie können sowohl fertige 3D-Modelle generieren, als auch Inspiration und Hilfe für den Künstler sein. \emph{SpeedTree} \cite{SpeedTree} ist ein Beispiel für Software, die für die Generierung von Vegetation verwendet wird. Sie unterstützt und beschleunigt die Erstellung von Szenen mit viel Vegetation. \cite{PCGSurvey_videoGames}
+Auf heutigen Rechnern ist der Speicherplatz nicht mehr so begrenzt und es kann viel Inhalt, \zb für PC-Spiele, von KünstlerInnen vorgefertigt werden. Trotzdem behält PG ihre Daseinsberechtigung, da der Entwurf komplexer Inhalte, wie beispielsweise Landschaften mit viel Vegetation, aufwändig ist und viel Zeit benötigt. Hier können wieder Algorithmen aus der PG eingesetzt werden um Zeit und Arbeit zu sparen. Sie können sowohl fertige 3D-Modelle generieren, als auch Inspiration und Hilfe für KünstlerInnen sein. \emph{SpeedTree}~\cite{SpeedTree} ist ein Beispiel für Software, die für die Generierung von Vegetation verwendet wird. Sie unterstützt und beschleunigt die Erstellung von Szenen mit viel Vegetation. \cite{PCGSurvey_videoGames}
 
-Dinge, die prozedural generiert werden können, sind Landschaften, Straßennetze, Gebäude, Menschen, Tiere oder auch Geschichten \cite{PCGSurvey}. 
+Dinge, die prozedural generiert werden können, sind \zb Landschaften, Straßennetze, Gebäude, Menschen, Tiere oder auch Geschichten \cite{PCGSurvey}. 
 Oft werden für ihre Generierung Rauschfunktionen nach Perlin (oder auch Perlin-Noise) \cite{perlinNoise} verwendet. Klassische Anwendungsgebiete für Perlin-Noise sind \zb die Generierung von Texturen, Höhenfeldern oder Volumina, wie Feuer oder Wolken. Zur Generierung von Lebewesen oder deren Skeletten ist Perlin-Noise nicht geeignet, da diese zu viele festgelegte Strukturen haben.\\
-Humanoide Charaktere für Computerspiele werden \zb in der Masterarbeit \cite{ProceduralCharacterGeneration} erzeugt und die Zusammenstellung \cite{PCGSurvey_videoGames} untersucht die PG von Wesen, die Videospiele bevölkern. Obwohl einige Arbeiten genannt werden, die sich mit diesem Thema beschäftigen, wird auch festgestellt, dass dieser Themenbereich noch wenig erforscht ist. \\
+Humanoide Charaktere für Computerspiele werden \zb in der Masterarbeit \cite{ProceduralCharacterGeneration} erzeugt und die Zusammenstellung \cite{PCGSurvey_videoGames} untersucht die PG von Wesen, die Videospiele bevölkern. Obwohl in \cite{PCGSurvey_videoGames} einige Arbeiten genannt werden, die sich mit der Generierung solcher Wesen beschäftigen, wird auch festgestellt, dass dieser Themenbereich noch wenig erforscht ist. \\
 Ein Beispiel, das erst nach Erscheinen dieser Zusammenstellung auf den Markt gekommen ist, ist das Computerspiel "`No Man's Sky"' \cite{NoMansSky}. Darin gibt es viele prozedural generierte fantastische Tiere. Zur Generierung dieser Tiere wird zunächst prozedural ein 3D-Modell generiert, in welches anschließend ein Rig eingepasst wird \cite{NoMansSkyDevelopment}.
 Die dort verwendeten Rigs sind keine wirklichkeitsgetreuen Skelette, sondern werden nur für die Animation verwendet (siehe Abschnitt \ref{character_animation}).
 
 
-%-------------------------------------------
+%------------------------------
 \section{Animation von Figuren}
 \label{character_animation}
 
 Um Figuren für Computerspiele oder Filme zu animieren, ist außer dem 3D-Modell ein Skelett \bzw Rig nötig. Dieses Rig ist oft sehr abstrakt und hat wenig mit lebensechten Skeletten zu tun. Es gibt eine Baumstruktur auf den Einzelteilen der Figur vor. Diese Baumstruktur ist für viele Algorithmen, die zur Animation verwendet werden, essentiell, \zb für inverse Kinematik (siehe Abschnitt \ref{IK}). Als Wurzel für das Rig wird meist ein Knochen in der Nähe des Schwerpunkts der Figur verwendet. Das ist bei humanoiden Figuren die Hüfte.\\
-Weit verbreitete Editoren für Animation, Modellierung, Simulation und Rendering sind Maya \cite{Maya} und 3ds Max \cite{3dsMax}. Auch hier werden solche Rigs verwendet \cite{MayaSkeletonHierarchy}. 3ds Max stellt \zb in einer Komponente namens Biped vorgefertigte Rigs für humanoide Figuren zur Verfügung, die einfach in schon existierende 3D-Modelle eingefügt werden können \cite{3dsMaxBiped}.
+Weit verbreitete Editoren für Animation, Modellierung, Simulation und Rendering sind Maya \cite{Maya} und 3ds Max \cite{3dsMax}. Auch hier werden solche Rigs verwendet. 3ds Max stellt \zb in einer Komponente namens Biped vorgefertigte Rigs für humanoide Figuren zur Verfügung, die einfach in schon existierende 3D-Modelle eingefügt werden können \cite{3dsMaxBiped}.
 
 Animationen werden dann mit Hilfe sogenannter Keyframes erzeugt. Keyframes sind Positionen, die die Figur im Laufe der Bewegung einnehmen soll. Interpolation zwischen den einzelnen Keyframes ergibt dann eine flüssige Bewegung. \cite[Kapitel 3]{sporeanim}\\
 Im Computerspiel Spore \cite{Spore} werden sogar zur Laufzeit Animationen für Figuren erzeugt, deren Aufbau vorher noch nicht bekannt war. Dazu werden vorher abstrakte Animationen, unabhängig vom Aufbau der speziellen Figur, erstellt. Diese werden dann zur Laufzeit auf die konkreten Figuren angewandt. \cite{sporeanim}
 
-Um besonders lebensecht wirkende Tiere zu erzeugen, ist es nötig den Aufbau des entprechenden Tieres möglichst wirklichkeitsgetreu zu modellieren. Dazu sind Modelle für Skelett, Muskeln und Haut nötig. Solche Modelle lassen sich beispielsweise mit dem Maya-Plugin Ziva \cite{Ziva} gestalten. \cite{ZivaGeneralSetup}
-
-Der Algorithmus, der hier erarbeitet wird, erzeugt Skelette mit lebensechten Knochenmodellen. Er kann als Inspiration zur Erstellung neuer Charaktere dienen oder auch als Grundlage für ein Tier, das ein realitätsnahes Skelett haben soll.
+Um besonders lebensecht wirkende Tiere zu erzeugen, ist es nötig den Aufbau des entsprechenden Tieres möglichst wirklichkeitsgetreu zu modellieren. Dazu sind Modelle für Skelett, Muskeln und Haut nötig. Solche Modelle lassen sich beispielsweise mit dem Maya-Plugin Ziva \cite{Ziva} gestalten.
 
 
 % \begin{itemize}
@@ -48,7 +46,6 @@ Der Algorithmus, der hier erarbeitet wird, erzeugt Skelette mit lebensechten Kno
 % \end{itemize}
 
 
-\newpage
 %--------------------------
 \section{Inverse Kinematik}
 \label{IK}
@@ -66,20 +63,21 @@ Es gibt viele verschiedene Methoden Probleme aus der inversen Kinematik zu löse
  
  % Ziel
  \emph{Principal Component Analysis} (PCA) oder auch Hauptkomponentenanalyse \cite{PCA} wird meist mit dem Ziel angewendet die Dimensionalität einer Menge von Datenpunkten zu verringern, dabei aber möglichst wenig Information zu verlieren.
- Beispielsweise wird sie im Zusammenhang mit 3D-Modellen von Gesichtern (\cite{PCA_faces}) oder 3D-Modellen von menschlichen Körpern (\cite{PCA_bodies}) eingesetzt. Auch im Zusammenhang mit prozeduraler Generierung wird PCA oft verwendet, \zb zur Generierung von humanoiden Charakteren für Videospiele \cite{ProceduralCharacterGeneration} oder Texturen für Gesichter \cite{GeneratingFacialTextures}.
+ Beispielsweise wird sie im Zusammenhang mit 3D-Modellen von Gesichtern \cite{PCA_faces} oder 3D-Modellen von menschlichen Körpern \cite{PCA_bodies} eingesetzt. Auch im Zusammenhang mit prozeduraler Generierung wird PCA oft verwendet, \zb zur Generierung von humanoiden Charakteren für Videospiele~\cite{ProceduralCharacterGeneration} oder Texturen für Gesichter \cite{GeneratingFacialTextures}.
  
  Als Ausgangspunkt für eine PCA dient eine Menge von Datenpunkten (oder Beispielen) $D$ im $n$-dimensionalen Raum. Voraussetzung ist, dass die Punkte in jeder Dimension normalverteilt sind. 
- Die Datenpunkte $D$ sind dann nach einer $n$-dimensionalen Normalverteilung verteilt. Betrachtet man nun die Wahrscheinlichkeitsdichte dieser Normalverteilung, so bilden alle Punkte, bei denen die Dichte einen Wert größer als $\epsilon$ annimmt, das Innere eines $(n-1)$-dimensionalen Hyperellipsoids. In diesem Volumen liegen die meisten der Datenpunkte $D$. Ihr Mittelwert bildet den Mittelpunktt.
+ Die Datenpunkte $D$ sind dann nach einer $n$-dimensionalen Normalverteilung verteilt. Betrachtet man nun die Wahrscheinlichkeitsdichte dieser Normalverteilung, so bilden alle Punkte, bei denen die Dichte einen Wert größer als $\epsilon$ annimmt, das Innere eines $(n-1)$-dimensionalen Hyperellipsoids. In diesem Volumen liegen die meisten der Datenpunkte $D$. Ihr Mittelwert bildet den Mittelpunkt.
  
  Nun ist das Ziel herauszufinden wo die Achsen des Hyperellipsoids liegen. Betrachtet man die Komponenten der Datenpunkte $D$ in den Richtungen der Achsen, so sind diese wiederum normalverteilt und die Verteilungen sind jeweils unabhängig voneinander.
- Um die Achsen des Hyperellipsoids zu berechnen, wird zunächst die Kovarianzmatrix der Datenpunkte $D$ aufgestellt und diese dann diagonalisiert. In den Spalten der damit berechneten Basiswechselmatrix stehen dann die Eigenvektoren und auf der Diagonalen der diagonalisierten Kovarianzmatrix die Eigenwerte.
+ Um die Achsen des Hyperellipsoids zu berechnen, wird zunächst die Kovarianzmatrix der Datenpunkte $D$ aufgestellt und diese dann diagonalisiert. Die Spalten der damit berechneten Basiswechselmatrix bilden eine Orthonormalbasis $\mathcal{B}$ aus Eigenvektoren. Auf der Diagonalen der diagonalisierten Kovarianzmatrix stehen die Eigenwerte. Diese sind immer $\geq 0$.
  Die Eigenvektoren sind die Achsen des Hyperellipsoids und die Eigenwerte geben die Varianz der Normalverteilung entlang der Achsen an.
  
- Jetzt können die Datenpunkte $D$ vom Eingabekoordinatensystem in dasjenige Koordinatensystem transformiert werden, das von den Achsen des Hyperellipsoids aufgespannt wird. Dazu stellt man die Punkte als Linearkombinationen der Eigenvektoren dar.
- Die Eigenvektoren, die zu den größten Eigenwerten gehören, sind die Hauptkomponenten oder "`principal components"'.
+ 
+ Jetzt können die Datenpunkte $D$ vom Eingabekoordinatensystem in dasjenige Koordinatensystem transformiert werden, das von den Achsen des Hyperellipsoids aufgespannt wird. Dazu stellt man die Punkte als Linearkombinationen der Eigenvektoren dar.\\
+ Die Vektoren der Basis $\mathcal{B}$ werden nun absteigend nach der Größe der dazugehörigen Eigenwerte sortiert. Diese Basis wird im Folgenden \emph{PCA-Basis} genannt. Der $i$-te Vektor der PCA-Basis wird als \emph{\mbox{$i$-ter} Eigenvektor} bezeichnet. Die ersten $m$ Eigenvektoren sind die Hauptkomponenten oder "`principal components"'.
  Um nun die Dimensionalität der Eingabedaten zu reduzieren, werden sie auf den Raum projiziert, der von den Hauptkomponenten aufgespannt wird. Je weniger Streuung die Datenpunkte auf denjenigen Achsen aufweisen, die weggelassen werden, desto weniger Information wird verworfen.
  
- Will man einen zufälligen Datenpunkt erzeugen, der die gleichen Verteilungen aufweist, wie die Eingabebeispiele, so funktioniert das im transformierten Koordinatensystem sehr gut. Da die einzelnen Dimensionen unabhängig voneinander sind, kann man einfach für jede Dimension eine normalverteilte Zufallszahl mit entsprechender Varianz generieren.
+ Will man einen zufälligen Datenpunkt erzeugen, der die gleiche Verteilung aufweist, wie die Eingabebeispiele, so funktioniert das im transformierten Koordinatensystem sehr gut. Da die einzelnen Dimensionen unabhängig voneinander sind, kann einfach für jede Dimension eine normalverteilte Zufallszahl mit entsprechender Varianz generiert werden.
  
  
 %---------------------------------- 
@@ -87,7 +85,7 @@ Es gibt viele verschiedene Methoden Probleme aus der inversen Kinematik zu löse
 \label{qqdiagrams}
 
 Quantil-Quantil-Diagramme sind eine grafische Methode um zu testen, ob eine Stichprobe einer bestimmten Verteilung unterliegt. \\
-Seien $x_1, x_2,\dots, x_n$ die Elemente einer Stichprobe und $F$ die Verteilungsfunktion derjenigen Verteilung, gegen die getestet werden soll. Die Verteilungsfunktion gibt für einen Wert $x$ an, wie groß die Wahrscheinlichkeit ist, dass eine nach $F$ verteilte Zufallsvariable einen Wert $\leq x$ annimmt.\\
+Seien $x_1, x_2,\dots, x_n$ die Elemente einer Stichprobe und $F$ die Verteilungsfunktion derjenigen Verteilung, gegen die getestet werden soll. Die Verteilungsfunktion gibt für einen Wert~$x$ an, wie groß die Wahrscheinlichkeit ist, dass eine nach $F$ verteilte Zufallsvariable einen Wert $\leq x$ annimmt.\\
 Nun werden die empirischen Quantile der Stichprobe mit den entsprechenden Quantilen von $F$ verglichen. Dazu wird die Stichprobe aufsteigend sortiert, was $x_{(1)}, x_{(2)},\dots, x_{(n)}$ ergibt. 
 Das empirische $\frac{i}{n}$-Quantil der Stichprobe ist $x_{(i)}$, da $i$ Werte $\leq x_{(i)}$ beobachtet wurden. Die inverse Verteilungsfunktion gibt für einen Wert $y$ den kleinsten Wert $x$ an, für den gilt, dass $F(x) > y$ ist, also das $y$-Quantil. Das $\frac{i}{n}$-Quantil von $F$ ist also $F^{-1}\left(\frac{i}{n}\right)$.
 
@@ -118,7 +116,7 @@ Wiederum eine Teilmenge davon bilden die \emph{kontextfreien} Grammatiken mit Pr
 \[A \rightarrow w \text{ mit } A \in N \text{ und } w \in (N \cup \Sigma)^*.\] \cite[Abschnitte 1.4 und 1.5]{FormalLanguageTheory}
 
 \emph{L-Systeme} oder Lindenmayer-Systeme sind spezielle Grammatiken. Sie wurden 1968 von dem Biologen Aristid Lindenmayer vorgestellt, mit dem Zweck das Wachstum vielzelliger Lebewesen zu modellieren. Im Unterschied zu Grammatiken, bei denen Produktionen einzeln nacheinander angewendet werden, werden bei L-Systemen alle Symbole gleichzeitig ersetzt. Dies soll modellieren, dass viele Zellteilungen zur gleichen Zeit stattfinden können.\\
-Es gibt auch hier wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme. Kontextfreie L-Systeme sind aber keine Teilmenge kontextfreier Grammatiken. Es gibt Sprachen, die von kontextfreien L-Systemen, aber nicht von kontextfreien Grammatiken erzeugt werden können und anders herum \cite[Abbildung 1.2]{AlgorithmicBeautyOfPlants}.\\
+Auch hier gibt es wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme. Kontextfreie L-Systeme sind aber keine Teilmenge kontextfreier Grammatiken. Es gibt Sprachen, die von kontextfreien L-Systemen, aber nicht von kontextfreien Grammatiken erzeugt werden können und anders herum \cite[Abbildung 1.2]{AlgorithmicBeautyOfPlants}.\\
 Oft werden L-Systeme verwendet um das Wachstum von Pflanzen zu modellieren. Es gibt aber auch andere Anwendungsbeispiele, wie \zb die Generierung von Städten \cite{cityGeneration}. 
 
 Bei Pflanzen treten oft Verzweigungen auf. Um diese zu modellieren, werden in L-Systemen Klammerstrukturen verwendet. Das Teilwort innerhalb einer Klammer repräsentiert einen "`Ast"', der wiederum in sich verzweigt sein kann.
@@ -137,10 +135,10 @@ Wenn zwei Symbole direkt aufeinander folgen, so bedeutet das, dass das linke Ele
 \label{genetic_algorithms}
 
 Ein sehr bekannter Zweig der evolutionären Algorithmen sind die genetischen Algorithmen.
-Die Grundprinzipien, die von genetischen Algorithmen verwendet werden, sind von Evolution und natürlicher Auslese inspiriert. Im einfachsten Fall sind eine Menge von Individuen (oder eine Population) gegeben, die durch "`Gene"' kodiert sind, und eine Fitnessfunktion. Die Fitnessfunktion bewertet die Individuen. Das Ziel ist Individuen zu entwickeln, die möglichst gut bewertet werden. 
+Die Grundprinzipien, die von genetischen Algorithmen verwendet werden, sind von Evolution und natürlicher Auslese inspiriert. Im einfachsten Fall sind eine Fitnessfunktion und eine Menge von Individuen (oder eine Population) gegeben, die durch "`Gene"' kodiert sind. Die Fitnessfunktion bewertet die Individuen. Das Ziel ist Individuen zu entwickeln, die möglichst gut bewertet werden. 
 Dazu werden aus der aktuellen Population zufällig, aber nach Fitness priorisiert, Individuen ausgewählt. Diese produzieren dann "`Nachkommen"' indem sie ihre Gene nach einer bestimmten Vorschrift vermischen.
 Diese "`Nachkommen"' bilden dann eine neue Population, die wiederum anhand der Fitnessfunktion bewertet wird. Damit startet eine neue Iteration.
 Dies wird so lange durchgeführt bis ein Individuum gefunden wurde, das die Fitnessfunktion gut genug erfüllt. \cite{Holland} \cite[Abschnitt 1.3.1]{EvolutionaryDesign_Introduction}\\
 In interaktiven Versionen evolutionärer Algorithmen können sogar Benutzer die Fitnessfunktion ersetzen, indem sie selbst die erzeugten Individuen bewerten. \cite{InteractiveEvolutionaryComputation}
 
-In der Masterarbeit \cite{JonHudson} werden 3D-Modelle von Lebewesen und ein passendes Rig (siehe Abschnitt \ref{character_animation}) mit Hilfe von genetischen Algorithmen generiert. Das Augenmerk liegt dort aber nicht auf realistischen Tieren oder realistischen Skeletten, im Gegensatz zu dieser Arbeit.
+In der Masterarbeit \cite{JonHudson} werden 3D-Modelle von Lebewesen und ein passendes Rig (siehe Abschnitt \ref{character_animation}) mit Hilfe von genetischen Algorithmen generiert. Das Augenmerk liegt dort, im Gegensatz zu dieser Arbeit, aber nicht auf realistischen Tieren oder realistischen Skeletten.
